public/css/menu.css
/*  MENU STYLING */

a {
  color: black;
}

body {
  font-family: 'Raleway', sans-serif;
}

h1 {
  font-size: 40px;
}

h4 {
  font-size: 25px;
}

input {
  margin: 5px;
  height: 40px;
}

p {
  font-size: 20px;
}

.btn-custom {
  background-color: #FF5202;
  border-color: #FF5202;
  color: black;
}

.btn-custom:hover, .btn-custom:focus, .btn-custom:active, .btn-custom.active {
  background-color: #e84900;
  border-color: #ce4100;
  color: white;
}

.btn-custom.disabled:hover, .btn-custom.disabled:focus, .btn-custom.disabled:active, .btn-custom.disabled.active, .btn-custom[disabled]:hover, .btn-custom[disabled]:focus, .btn-custom[disabled]:active, .btn-custom[disabled].active, fieldset[disabled] .btn-custom:hover, fieldset[disabled] .btn-custom:focus, fieldset[disabled] .btn-custom:active, fieldset[disabled] .btn-custom.active {
  background-color: #FF5202;
  border-color: #FF5202;
}

.cartCount {
  font-size: 20px;
  vertical-align: top;
  padding-left: 3px;
}

.cartHeader {
  padding-right: 62px;
}

.confirm {
  margin-top: 40px;
  margin-bottom: 40px;
}

.glyphicon {
  color: black;
  font-size: 30px;
  margin-right: 15px;
}

.glyphicon-remove {
  font-size: 12px;
  margin: 5px;
}

.h1Container {
  margin-top: 120px;
  text-align: center;
  margin-bottom: 20px;
}

.item {
  padding-right: 40px;
}

.menu {
  margin-top: 30px;
  margin-bottom: 30px;
}

.menuItem {
  margin-top: 10px;
  margin-bottom: 10px;
}

.navbar-brand {
  font-size: 20px;
  font-family: 'Raleway', sans-serif;
}

.scheduleDelivery {
  margin-bottom: 40px;
}

.subTotalHeader {
  padding-right: 40px;
}

.subTotalTable {
  margin-top: 20px;
  font-weight: 700;
}

.target-nav {
  background-color: #fff;
  border-color: #fff;
  color: black;
  box-shadow: 0 -8px 29px 0 rgba(0, 0, 0, 0.5);
  padding-top: 10px;
}

.price {
  padding-right: 40px;
}

.thead {
  padding: 10px;
}

.title1 {
  text-align: center;
  margin-top: 120px;
}

.title2 {
  text-align: center;
}

.quantity {
  text-align: center;
}


/* End of Menu page styling */

